--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
+    "@types/fastify-multipart": "0.7.2",
     "@types/node": "22.3.0",
     "prisma": "5.18.0",
     "tsup": "8.2.4",
