--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
     "magic-bytes.js": "1.10.0",
+    "openai": "4.75.0",
     "zod": "^3.23.8"
   }
 }
